--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
     </dependencies>
     
 </project>
