--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.11</version>
+        </dependency>
 
     </dependencies>
-    
+
 </project>
